--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
+    "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.4",
-    "morgan": "^1.10.0"
+    "mongoose": "^8.9.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.9"
   },
   "devDependencies": {
+    "dotenv": "^16.4.7",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
